resources/azure/main.tf
terraform {
  required_providers {
    azurerm = {
      source  = "hashicorp/azurerm"
      version = "=3.0.0"
    }
  }
}

provider "azurerm" {
  features {}
}

data "azurerm_resource_group" "rg" {
  name = "JohnM-DevOps-Oxy"
}

# resource "azurerm_resource_group" "rg" {
#   name     = var.resource_group
#   location = var.location
# }

resource "azurerm_virtual_network" "vnet" {
  name                = var.virtual_network_name
  address_space       = ["${var.address_space}"]
  location            = "${data.azurerm_resource_group.rg.location}"
  resource_group_name = "${data.azurerm_resource_group.rg.name}"
}

resource "azurerm_subnet" "subnet" {
  name                 = "${var.rg_prefix}-subnet"
  resource_group_name  = "${data.azurerm_resource_group.rg.name}"
  virtual_network_name = azurerm_virtual_network.vnet.name
  address_prefixes     = var.subnet_prefix
}

resource "azurerm_public_ip" "publicip" {
  name                = "${var.rg_prefix}-public-ip"
  location            = "${data.azurerm_resource_group.rg.location}"
  resource_group_name = "${data.azurerm_resource_group.rg.name}"
  allocation_method   = "Dynamic"
  domain_name_label   = var.dns_name
}

resource "azurerm_network_security_group" "nsg" {
  name                = "${var.rg_prefix}-nsg"
  location            = "${data.azurerm_resource_group.rg.location}"
  resource_group_name = "${data.azurerm_resource_group.rg.name}"

  security_rule {
    name                       = "ssh"
    priority                   = 1000
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "web"
    priority                   = 1001
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_ranges    = ["80", "443"]
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
}

resource "azurerm_network_interface" "nic" {
  name                = "${var.rg_prefix}-nic"
  location            = "${data.azurerm_resource_group.rg.location}"
  resource_group_name = "${data.azurerm_resource_group.rg.name}"

  ip_configuration {
    name                          = "${var.rg_prefix}-nic-configuration"
    subnet_id                     = azurerm_subnet.subnet.id
    private_ip_address_allocation = "Dynamic"
    #public_ip_address_id          = azurerm_public_ip.publicip.id
  }
}

resource "azurerm_storage_account" "storage" {
  name                     = "${var.hostname}storage14344"
  location                 = "${data.azurerm_resource_group.rg.location}"
  resource_group_name      = "${data.azurerm_resource_group.rg.name}"
  account_tier             = var.storage_account_tier
  account_replication_type = var.storage_replication_type
}

resource "azurerm_managed_disk" "datadisk" {
  name                 = "${var.hostname}-data"
  location             = "${data.azurerm_resource_group.rg.location}"
  resource_group_name  = "${data.azurerm_resource_group.rg.name}"
  storage_account_type = "Standard_LRS"
  create_option        = "Empty"
  disk_size_gb         = "63"
}

resource "azurerm_virtual_machine" "vm" {
  name                  = "${var.rg_prefix}-vm"
  location              = "${data.azurerm_resource_group.rg.location}"
  resource_group_name   = "${data.azurerm_resource_group.rg.name}"
  network_interface_ids = [azurerm_network_interface.nic.id]
  vm_size               = var.vm_size

  storage_os_disk {
    name              = "${var.hostname}-os"
    caching           = "ReadWrite"
    create_option     = "FromImage"
    managed_disk_type = "Standard_LRS"
  }

  storage_data_disk {
    name            = azurerm_managed_disk.datadisk.name
    managed_disk_id = azurerm_managed_disk.datadisk.id
    create_option   = "Attach"
    lun             = 0
    disk_size_gb    = azurerm_managed_disk.datadisk.disk_size_gb
  }

  storage_image_reference {
    publisher = var.image_publisher
    offer     = var.image_offer
    sku       = var.image_sku
    version   = var.image_version
  }

  os_profile {
    computer_name  = var.hostname
    admin_username = var.admin_username
  }

  os_profile_linux_config {
    disable_password_authentication = true

    ssh_keys {
      path     = "/home/${var.admin_username}/.ssh/authorized_keys"
      key_data = var.admin_authorized_keys
    }
  }
}

resource "azurerm_virtual_machine_extension" "pfgdeploy" {
  name               = "${var.hostname}-deploy-script"
  virtual_machine_id = azurerm_virtual_machine.vm.id
  #location             = var.location
  #resource_group_name  = azurerm_resource_group.rg.name
  #virtual_machine_name = azurerm_virtual_machine.vm.name
  publisher            = "Microsoft.Azure.Extensions"
  type                 = "CustomScript"
  type_handler_version = "2.0"

  settings = <<SETTINGS
{
    "fileUris": ["${var.post_deployment_script_url}"],
    "commandToExecute": "./${var.post_deployment_script_name} ${azurerm_public_ip.publicip.fqdn} ${var.admin_email} ${var.admin_username}"
}
SETTINGS
}
